# internal-task-management-system-test-task

./: .gitignore  README.md  ТЗ.md
backend/: internal_tasks.db  pyproject.toml
backend/src/app/: __init__.py  dependencies.py  exceptions.py  main.py
backend/src/app/api/: __init__.py  basic.py  schemas.py  tasks.py
backend/src/core/domain/: __init__.py  models.py
backend/src/core/interfaces/: __init__.py  repositories.py
backend/src/core/use_cases/: __init__.py  create_task.py  get_tasks.py  update_task.py
backend/src/infrastructure/: __init__.py  logging.py
backend/src/infrastructure/database/: __init__.py  database.py  models.py
backend/src/infrastructure/database/repositories/: __init__.py  tasks.py
backend/src/infrastructure/gateways/: __init__.py
backend/tests/: conftest.py  test_models.py  test_repositories.py  test_tasks_api.py  test_use_cases.py
docs/: project_context.md  project_structure.md
docs/tasks/backend-implementation/: architecture_analysis.md  backend-implementation_context.md  execution_log.md  implementation_plan.md
docs/tasks/frontend-implementation/: implementation_plan.md  subtasks.md  task.md
frontend/: README.md  next.config.js  package-lock.json  package.json
frontend/src/: __init__.ts
frontend/src/__tests__/: BookingPage.test.tsx  CreateTaskForm.test.tsx  TaskItem.test.tsx  TaskList.test.tsx  TaskStatusBadge.test.tsx  schemas.test.ts  useCreateTask.test.tsx  useTasks.test.tsx  useUpdateTaskStatus.test.tsx  utils.test.ts
frontend/src/app/: layout.tsx  not-found.tsx  page.tsx  providers.tsx
(+21 files in other folders)
